fix: update code

--- a/docs/tutorials/create-custom-application/security/wrapping-it-up.mdx
+++ b/docs/tutorials/create-custom-application/security/wrapping-it-up.mdx
@@ -51,7 +51,7 @@ Apart form the basic pin information, let's also show who created the pin we've 
 
 Ultimately, our [`pinDetails.tsx`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/06-wrapping-it-up/pinterest-clone/app/code/src/plugins/routes/pinDetails.tsx) file should look like the following:
 
-```tsx title="pinterest-clone/app/code/src/plugins/routes/pinDetails.tsx" {19-21,51-52}
+```tsx title="pinterest-clone/app/code/src/plugins/routes/pinDetails.tsx" {19-21,51-54}
 import React from "react";
 import { RoutePlugin } from "@webiny/app/plugins/RoutePlugin";
 import { Link, Route, RouteChildrenProps } from "@webiny/react-router";
@@ -102,8 +102,10 @@ const PinDetails: React.FC<Props> = props => {
                     <Col span={12}>
                         <h1>{data.title}</h1>
                         <p>{data.description}</p>
-                        <Divider/>
-                        <p>Created by: <b>{data.createdBy.displayName}</b></p>
+                        <Divider />
+                        <p>
+                            Created by: <b>{data.createdBy?.displayName || "Unknown"}</b>
+                        </p>
                     </Col>
                 </Row>
             ) : (
