fix: use "they"

--- a/docs/tutorials/create-custom-application/security/cloud-infrastructure/adding-user-pool-client.mdx
+++ b/docs/tutorials/create-custom-application/security/cloud-infrastructure/adding-user-pool-client.mdx
@@ -90,7 +90,7 @@ export default Cognito;
 
 Like in the previous section, we're again exporting a single `Cognito` class, although this time, only a single User Pool Client is encapsulated within it.
 
-Some of the more important properties here would be the `userPoolId`, which determines the parent User Pool, and the `callbackUrls` and `logoutUrls` properties, which contain a list of allowed redirect URLs. Remember, once a user completes the external Hosted UI authentication flow, she/he is redirected back to our application. That's why we've added both localhost URL (for local development purposes) and an existing Cloudfront distribution URL (used once our React application is deployed and used online). We'll see how we'll distinguish between the two in our React application, soon enough.
+Some of the more important properties here would be the `userPoolId`, which determines the parent User Pool, and the `callbackUrls` and `logoutUrls` properties, which contain a list of allowed redirect URLs. Remember, once users complete the external Hosted UI authentication flow, they are redirected back to our application. That's why we've added both localhost URL (for local development purposes) and an existing Cloudfront distribution URL (used once our React application is deployed and used online). We'll see how we'll distinguish between the two in our React application, soon enough.
 
 Like in the previous section, the next step is to visit the [`index.ts`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/03-cloud-infrastructure/02-adding-user-pool-client/pinterest-clone/app/pulumi/index.ts) entry point file, located in the [`pinterest-clone/app/pulumi`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/03-cloud-infrastructure/02-adding-user-pool-client/pinterest-clone/app/pulumi) folder. There, we'll import the newly created file, instantiate the `Cognito` class so that the encapsulated cloud infrastructure code actually gets executed, and, finally, update the stack output properties. Here we'll add the `cognitoUserPool.clientId` property, which, as the name suggests, will contain the ID of the deployed User Pool Client.
 
