--- a/docs/tutorials/create-custom-application/security/getting-started.mdx
+++ b/docs/tutorials/create-custom-application/security/getting-started.mdx
@@ -44,7 +44,7 @@ As mentioned in the previous section, in order to perform authentication in our 
 
 An authentication flow can easily be introduced via [Amazon Cognito](https://aws.amazon.com/cognito/), by creating a new [User Pool](https://docs.aws.amazon.com/cognito/latest/developerguide/getting-started-with-cognito-user-pools.html). With it, we can implement a couple of different authentication flows, but for the purposes of this tutorial, we'll go with the easiest one, and that's [Hosted UI](https://docs.aws.amazon.com/cognito/latest/developerguide/cognito-user-pools-app-integration.html).
 
-With this approach, the authentication flow is completely offloaded to Amazon Cognito. Once a user wishes to sign up or sign in to our application, she/he usually clicks on a button or a link, which causes a redirect to the standalone hosted authentication flow. So, as mentioned, the authentication flow is happening completely outside of our application.
+With this approach, the authentication flow is completely offloaded to Amazon Cognito. Once users wish to sign up or sign in to our application, they usually click on a button or a link, which causes a redirect to the standalone hosted authentication flow. So, as mentioned, the authentication flow is happening completely outside of our application.
 
 <CenteredImage
   alt="User Authentication Flow Start"
