fix: apply minor rewording

--- a/docs/release-notes/5.18.0/changelog.mdx
+++ b/docs/release-notes/5.18.0/changelog.mdx
@@ -30,9 +30,7 @@ Please check the [Webiny 5.18.0 migration guide](/docs/release-notes/5.18.0/upgr
 
 The highlight of this release - the new Amazon DynamoDB-only version of Webiny Serverless CMS!
 
-As the name itself suggests, this new setup completely relies on [Amazon DynamoDB](https://aws.amazon.com/dynamodb/) for storing and retrieving data!
-
-With the [Amazon ElasticSearch](https://aws.amazon.com/opensearch-service/the-elk-stack/what-is-elasticsearch/) no longer being a requirement, developers and organizations working on smaller and medium-sized projects can benefit from the following:
+As the name itself suggests, this new setup completely relies on [Amazon DynamoDB](https://aws.amazon.com/dynamodb/) for storing and retrieving data! So, with the [Amazon ElasticSearch](https://aws.amazon.com/opensearch-service/the-elk-stack/what-is-elasticsearch/) no longer being a requirement, developers and organizations working on smaller and medium-sized projects can benefit from the following:
 
 - faster to get started
 - easier custom development
@@ -40,19 +38,19 @@ With the [Amazon ElasticSearch](https://aws.amazon.com/opensearch-service/the-el
 - 100% serverless
 - cheaper - there are no fixed monthly costs, you only pay for what you use
 
-We also believe this new setup will make things a bit easier for developers who want to contribute to the project, which is something we've been passionate about from the very beginning of Webiny!
+We also believe this new setup will make things a bit easier for developers who want to contribute to the project. Open-source is something we've been passionate about from the very beginning of Webiny, so, we're definitely excited to see what impact the setup will have in terms of potential future community contributions.
 
-To try the new DynamoDB-only version of Webiny, simply run the following command in your terminal of choice, and follow the on-screen instructions:
+To get started with the new DynamoDB-only version of Webiny, simply run the following command in your terminal of choice, and follow the on-screen instructions:
 
 ```bash
-npx create-webiny-project my-webiny-projects
+npx create-webiny-project my-new-webiny-project
 ```
 
 :::info
 For more installation-related information, you can also visit the updated [Install Webiny](/docs/tutorials/install-webiny) tutorial.
 :::
 
-We really hope you'll give this new version of Webiny Serverless CMS a try and that you'll love it. For any questions, suggestions, or general feedback, feel free to message us on our [community Slack channel](https://www.webiny.com/slack), we'd certainly love to hear from you!
+We really hope you'll give this new version of Webiny Serverless CMS a try and that you'll like it. Of course, for any questions, suggestions, or general feedback, feel free to message us on our [community Slack channel](https://www.webiny.com/slack), we'd certainly love to hear from you!
 
 ## Development
 
