feat: add cache options request item

--- a/docs/release-notes/5.18.0/changelog.mdx
+++ b/docs/release-notes/5.18.0/changelog.mdx
@@ -21,11 +21,11 @@ Please check the [Webiny 5.18.0 migration guide](/docs/release-notes/5.18.0/upgr
 ## DynamoDB-only Version of Webiny Serverless CMS
 
 <CenteredImage
-  src={webinyDynamoDb}
-  shadow={false}
-  style={{ maxWidth: 750 }}
-  canEnlarge={false}
-  title={"The highlight of this release - the new Amazon DynamoDB-only version of Webiny!"}
+    src={webinyDynamoDb}
+    shadow={false}
+    style={{maxWidth: 750}}
+    canEnlarge={false}
+    title={"The highlight of this release - the new Amazon DynamoDB-only version of Webiny!"}
 />
 
 The highlight of this release - the new Amazon DynamoDB-only version of Webiny Serverless CMS!
@@ -92,10 +92,10 @@ For more information on this change, make sure to check out the [Additional Info
 Previously, when invoking the Pulumi CLI via the [`webiny pulumi`](/docs/key-topics/webiny-cli#yarn-webiny-pulumi-folder---env-env----command) command and passing the `--json` flag to it, the final output would still include informative messages:
 
 <CenteredImage
-  src={pulumiCliJsonIssue}
-  shadow={false}
-  style={{ maxWidth: 750 }}
-  title={'Inappropriate output of the "webiny pulumi" command.'}
+    src={pulumiCliJsonIssue}
+    shadow={false}
+    style={{maxWidth: 750}}
+    title={'Inappropriate output of the "webiny pulumi" command.'}
 />
 
 Eventually, this would make it impossible to parse the output of the command, so we've ensured that whenever the `--json` flag is passed, that no additional informative messages are returned, only the actual JSON.
@@ -168,3 +168,11 @@ We've expanded our existing [Create Custom Application](/docs/tutorials/create-c
 As the title suggests, in this section we dive deeper into the security aspect of custom application development. We cover implementation of different concepts like authentication, authorization, deploying custom cloud infrastructure resources, [Amazon Cognito User Pools](https://docs.aws.amazon.com/cognito/latest/developerguide/cognito-user-identity-pools.html), and more!
 
 If you're interested in learning more about (serverless) custom application development with Webiny, then we certainly encourage you to check this out.
+
+
+## Other
+
+
+### Add Caching for OPTIONS Request ([#2025](https://github.com/webiny/webiny-js/pull/2025))
+
+We've added CDN level caching for the `OPTIONS` request, which means you will now get faster response time across the whole API.
