fix: update links

--- a/docs/release-notes/5.18.0/changelog.mdx
+++ b/docs/release-notes/5.18.0/changelog.mdx
@@ -151,6 +151,14 @@ Thanks to [@econtentmaps](https://github.com/econtentmaps), the button can now a
 
 -->
 
+## Other
+
+### Corrected Caching of `OPTIONS` HTTP Requests ([#2025](https://github.com/webiny/webiny-js/pull/2025))
+
+Prior to this release, `OPTIONS` HTTP requests issued towards the deployed GraphQL APIs would not be properly cached by the browser. In some cases, this could have a negative impact on the overall frontend application performance.
+
+This has now been addressed. From now on, you should see the `OPTIONS` HTTP requests properly cached by the browser, and, hopefully, enjoy a bit faster frontend application experience.
+
 ## Documentation
 
 ### Reorganization of Existing Articles ([#347](https://github.com/webiny/docs.webiny.com/pull/347))
@@ -163,16 +171,8 @@ We still have a couple of documentation-related improvements that we'd like to d
 
 ### Create Custom Application - Security Tutorial ([#340](https://github.com/webiny/docs.webiny.com/pull/340))
 
-We've expanded our existing [Create Custom Application](/docs/tutorials/create-custom-application/introduction) tutorial with the new [Security](#) section!
+We've expanded our existing [Create Custom Application](/docs/tutorials/create-custom-application/introduction) tutorial with the new [Security](/docs/tutorials/create-custom-application/security/introduction) section!
 
 As the title suggests, in this section we dive deeper into the security aspect of custom application development. We cover implementation of different concepts like authentication, authorization, deploying custom cloud infrastructure resources, [Amazon Cognito User Pools](https://docs.aws.amazon.com/cognito/latest/developerguide/cognito-user-identity-pools.html), and more!
 
 If you're interested in learning more about (serverless) custom application development with Webiny, then we certainly encourage you to check this out.
-
-
-## Other
-
-
-### Add Caching for OPTIONS Request ([#2025](https://github.com/webiny/webiny-js/pull/2025))
-
-We've added CDN level caching for the `OPTIONS` request, which means you will now get faster response time across the whole API.
