fix: add a paragraph about CF and ACM

--- a/docs/enterprise/multi-tenancy/setup.mdx
+++ b/docs/enterprise/multi-tenancy/setup.mdx
@@ -31,6 +31,8 @@ There are several steps involved in enabling multi-tenancy:
 - adding a Lambda@Edge function to the Pulumi configuration
 - creating a certificate in AWS ACM, and linking it with CloudFront distribution
 
+Cloudfront will be used for TLS termination, and AWS ACM for certificate management. Customers may use other 3rd party CDNs for those steps. If that’s the case please get in touch so we can support you through the setup.
+
 The following sections guide you through the process in a step-by-step manner.
 
 ## 1) Prepare the Project
