fix: update the refresh command

--- a/docs/enterprise/multi-tenancy/setup.mdx
+++ b/docs/enterprise/multi-tenancy/setup.mdx
@@ -273,10 +273,10 @@ error: deleting urn:pulumi:dev::website::aws:cloudfront/distribution:Distributio
 status code: 412
 ```
 
-This one is usually resolved by refreshing the Pulumi state:
+This one is usually resolved by refreshing the Pulumi state of the `website` project application:
 
 ```shell
- yarn webiny pulumi apps/website -- refresh --yes
+ yarn webiny pulumi apps/website --env=dev -- refresh --yes
 ````
 
 > NOTE: there's a space between `--` and `refresh`.
