docs: renamed Webiny Applications menu to Serverless CMS
Thanks: Adrian & Pedro for the inputs.

--- a/docs/webiny-overview/serverless-cms/apps/intro.mdx
+++ b/docs/webiny-overview/serverless-cms/apps/intro.mdx
@@ -1,7 +1,7 @@
 ---
 id: intro
 title: Serverless CMS
-sidebar_label: Serverless CMS
+sidebar_label: Introduction
 keywords: ["serverless", "cms", "headless cms", "graphql"]
 description: Webiny Serverless CMS Intro
 ---
