fix: use title case

--- a/docs/key-topics/deployment/iac-with-pulumi.mdx
+++ b/docs/key-topics/deployment/iac-with-pulumi.mdx
@@ -1,6 +1,6 @@
 ---
 id: iac-with-pulumi
-title: Infrastructure as code with Pulumi
+title: Infrastructure as Code with Pulumi
 sidebar_label: IaC with Pulumi
 keywords: ["webiny", "deployment", "cloud", "infrastructure", "pulumi"]
 description: Learn what is Pulumi and how Webiny is utilizing it with your project applications.
