--- a/docs/release-notes/5.19.0/changelog.mdx
+++ b/docs/release-notes/5.19.0/changelog.mdx
@@ -8,9 +8,25 @@ description: See what's new in Webiny version 5.19.0.
 
 # Changes
 
-
-
 ## Development
+
+### Locked Versions of `@pulumi/*` Packages ([#2089](https://github.com/webiny/webiny-js/pull/2089))
+
+In attempt to make things a bit more stable, we've decided to put a lock on the `@pulumi/*` NPM package versions. Locking has been achieved via the [`resolutions`](https://yarnpkg.com/configuration/manifest/#resolutions) property in the root `package.json` file.
+
+:::info
+`@pulumi/*` NPM packages are being utilized by Pulumi, the underlying infrastructure-as-code (IaC) solution Webiny relies on. To learn more, check out the [Infrastructure as Code With Pulumi](/docs/key-topics/deployment/iac-with-pulumi) key topic.
+:::
+
+:::note
+For existing projects that are being upgraded to `5.19.0`, the `resolutions` property will be updated via the [`webiny upgrade`](/docs/release-notes/5.19.0/upgrade-guide#2-run-the-upgrade-command) command.
+:::
+
+### Pulumi SDK - Using Correct Separator When Constructing `PATH` Environment Variable ([#2084](https://github.com/webiny/webiny-js/pull/2084))
+
+Because of an issue in the construction of the `PATH` environment variable in our internal [Pulumi SDK](https://github.com/webiny/webiny-js/tree/next/packages/pulumi-sdk), on non-Windows operating systems, users might've experienced an issue during deployment of their custom project applications. This has now been addressed, so new deployments should work as expected.
+
+Thank you goes to [@snstanton](https://github.com/snstanton) for discovering this! ️️❤️
 
 ### Fixed Incorrect AWS Profile Being Logged During Deployment ([#2078](https://github.com/webiny/webiny-js/pull/2078))
 
@@ -19,3 +35,26 @@ In order to use the [`webiny deploy`](/docs/how-to-guides/deployment/deploy-your
 When relying on environment variables, users can choose to either use a combination of `AWS_ACCESS_KEY_ID` and `AWS_SECRET_ACCESS_KEY`, or a single `AWS_PROFILE` variable. In case of the former, we've noticed that, during deployment, an incorrect message would get displayed in the terminal, saying AWS profile "undefined" is being used.
 
 This has now been addressed. From now on, when a combination of `AWS_ACCESS_KEY_ID` and `AWS_SECRET_ACCESS_KEY` environment variables is used, the AWS Access Key ID will be displayed instead.
+
+### New `acl` and `cacheControl` Options on the `uploadFolderToS3` Function ([#2066](https://github.com/webiny/webiny-js/pull/2066), [#2083](https://github.com/webiny/webiny-js/pull/2083))
+
+The [`uploadFolderToS3`](https://github.com/webiny/webiny-js/blob/0de898563ff84bf47d6aa740c2e43773f7c2d90e/packages/cli-plugin-deploy-pulumi/utils/aws/uploadFolderToS3.d.ts#L8) is a small utility function that is used to upload a complete folder directly to an Amazon S3 bucket. At the moment, it's used when you deploy your Admin Area and Website project applications, within [`apps/admin/cli/deploy.ts`](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/common/apps/admin/cli/deploy.ts#L39) and [`apps/admin/cli/deploy.ts`](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/common/apps/admin/cli/deploy.ts#L39), respectively.
+
+With this release, we've improved this utility function, by enabling users to specify the [`acl`](https://github.com/webiny/webiny-js/blob/0de898563ff84bf47d6aa740c2e43773f7c2d90e/packages/cli-plugin-deploy-pulumi/utils/aws/uploadFolderToS3.d.ts#L22) and [`cacheControl`](https://github.com/webiny/webiny-js/blob/0de898563ff84bf47d6aa740c2e43773f7c2d90e/packages/cli-plugin-deploy-pulumi/utils/aws/uploadFolderToS3.d.ts#L23) properties that will be set for every uploaded file.
+
+Once again, a big thank you to [@snstanton](https://github.com/snstanton) for implementing this improvement! 🍻
+
+:::tip
+The `acl` property lets you set **Canned ACL** for every uploaded file. To learn more, check out [official AWS documentation](https://docs.aws.amazon.com/AmazonS3/latest/userguide/acl-overview.html#Canned%20ACL).
+:::
+
+## Page Builder
+
+### Button Page Element - Ability to Register A Custom Callback Handler ([#2022](https://github.com/webiny/webiny-js/pull/2022))
+
+Prior to this release, we could say the Button page element was a bit "basic", since it was only capable of representing a link and nothing else. But, not anymore.
+
+Thanks to [@econtentmaps](https://github.com/econtentmaps), the button can now also be configured to execute a piece of code, that you previously registered via the new [`PbButtonElementClickHandlerPlugin`](https://github.com/webiny/webiny-js/blob/next/packages/app-page-builder/src/types.ts#L256) plugin.
+
+[IMAGE]
+
