wip: create changelog

--- a/docs/release-notes/5.19.0/changelog.mdx
+++ b/docs/release-notes/5.19.0/changelog.mdx
@@ -26,7 +26,7 @@ For existing projects that are being upgraded to `5.19.0`, the `resolutions` pro
 
 Because of an issue in the construction of the `PATH` environment variable in our internal [Pulumi SDK](https://github.com/webiny/webiny-js/tree/next/packages/pulumi-sdk), on non-Windows operating systems, users might've experienced an issue during deployment of their custom project applications. This has now been addressed, so new deployments should work as expected.
 
-Thank you goes to [@snstanton](https://github.com/snstanton) for discovering this! ️️❤️
+Thank you goes to [**@snstanton**](https://github.com/snstanton) for discovering this! ️️❤️
 
 ### Fixed Incorrect AWS Profile Being Logged During Deployment ([#2078](https://github.com/webiny/webiny-js/pull/2078))
 
@@ -42,11 +42,21 @@ The [`uploadFolderToS3`](https://github.com/webiny/webiny-js/blob/0de898563ff84b
 
 With this release, we've improved this utility function, by enabling users to specify the [`acl`](https://github.com/webiny/webiny-js/blob/0de898563ff84bf47d6aa740c2e43773f7c2d90e/packages/cli-plugin-deploy-pulumi/utils/aws/uploadFolderToS3.d.ts#L22) and [`cacheControl`](https://github.com/webiny/webiny-js/blob/0de898563ff84bf47d6aa740c2e43773f7c2d90e/packages/cli-plugin-deploy-pulumi/utils/aws/uploadFolderToS3.d.ts#L23) properties that will be set for every uploaded file.
 
-Once again, a big thank you to [@snstanton](https://github.com/snstanton) for implementing this improvement! 🍻
+Once again, a big thank you to [**@snstanton**](https://github.com/snstanton) for implementing this nifty improvement! 🍻
 
 :::tip
 The `acl` property lets you set **Canned ACL** for every uploaded file. To learn more, check out [official AWS documentation](https://docs.aws.amazon.com/AmazonS3/latest/userguide/acl-overview.html#Canned%20ACL).
 :::
+
+### `webiny deploy` Command - Introduced `--deploy` Flag ([#2096](https://github.com/webiny/webiny-js/pull/2096))
+
+A new `--deploy` flag has been added to the [`webiny deploy`](/docs/how-to-guides/deployment/deploy-your-project).
+
+By setting it to false (by passing `--no-deploy`), this small addition allows users to skip the deployment step, which can be useful if they only want to build the specified project application. For example:
+
+```bash
+yarn webiny deploy api --env dev --no-deploy
+```
 
 ## Page Builder
 
