fix: add a paragraph about custom domain CNAMEing

--- a/docs/enterprise/multi-tenancy/setup.mdx
+++ b/docs/enterprise/multi-tenancy/setup.mdx
@@ -237,6 +237,12 @@ For the `acmCertificateArn`, use the ARN of the certificate you created in step 
 
 For `aliases`, enter the custom domains supported by your certificate. You can use wildcards to support multiple subdomains.
 
+:::danger Important
+Don't forget to CNAME your custom domain to the CloudFront distribution of the `website` application.
+
+To find your CloudFront website domain, run `yarn webiny info --env=dev` and look for the `Website URL`.
+:::
+
 ## 7) Deploy Your Project
 
 Now it's time to deploy the entire project. We need to deploy everything: `api`, `admin`, and `website`. The easiest way to do all 3 at once, is by running the following:
@@ -252,7 +258,7 @@ Once your project is deployed, open your `admin` app. To configure a custom doma
 <CenteredImage src={rootTenantLabel} title="Open Root Tenant Settings Dialog." />
 <CenteredImage src={rootTenantDialog} title="Configure Root Tenant Custom Domains." />
 
-:::warning
+:::danger Important
 If you don't have a custom domain for your root tenant, you should enter your CloudFront CDN domain here. Otherwise, the Lambda@Edge router will not be able to route the request to your root tenant website.
 
 To find your CloudFront website domain, run `yarn webiny info --env=dev` and look for the `Website URL`.
