--- a/docs/release-notes/5.19.0/changelog.mdx
+++ b/docs/release-notes/5.19.0/changelog.mdx
@@ -6,6 +6,9 @@ keywords: ["webiny", "version", "5.19.0", "changelog"]
 description: See what's new in Webiny version 5.19.0.
 ---
 
+import CenteredImage from "@components/CenteredImage";
+import pageBuilderBtnAction from "./images/page-builder-btn-action.png";
+
 # Changes
 
 ## Development
@@ -64,7 +67,9 @@ yarn webiny deploy api --env dev --no-deploy
 
 Prior to this release, we could say the Button page element was a bit "basic", since it was only capable of representing a link and nothing else. But, not anymore.
 
-Thanks to [@econtentmaps](https://github.com/econtentmaps), the button can now also be configured to execute a piece of code, that you previously registered via the new [`PbButtonElementClickHandlerPlugin`](https://github.com/webiny/webiny-js/blob/next/packages/app-page-builder/src/types.ts#L256) plugin.
+Thanks to [**@econtentmaps**](https://github.com/econtentmaps), the button can now also be configured to execute a piece of code, that you previously registered via the new [`PbButtonElementClickHandlerPlugin`](https://github.com/webiny/webiny-js/blob/next/packages/app-page-builder/src/types.ts#L256) plugin.
 
-[IMAGE]
-
+<CenteredImage
+    src={pageBuilderBtnAction}
+    title={"The highlight of this release - the new Amazon DynamoDB-only version of Webiny!"}
+/>
