feat(release-notes): 5.19.0 headless cms

--- a/docs/release-notes/5.19.0/ref-field-workarounds.mdx
+++ b/docs/release-notes/5.19.0/ref-field-workarounds.mdx
@@ -34,7 +34,7 @@ So GraphQL query would look like:
 ```
 
 
-## Why Do We Need a Workaround?
+## Why Do I Need a Workaround?
 
 Prior to *5.19.0* we did not store both ID (generated string + version) and entryId (generated string only) into the database, and you could not search for all `Articles` that have `Category` in any available version.
 We changed that in *5.19.0*.
