feat(release-notes): 5.19.0 headless cms

--- a/docs/release-notes/5.19.0/ref-field-workarounds.mdx
+++ b/docs/release-notes/5.19.0/ref-field-workarounds.mdx
@@ -39,7 +39,7 @@ So GraphQL query would look like:
 Prior to *5.19.0* we did not store both ID (generated string + version) and entryId (generated string only) into the database, and you could not search for all `Articles` that have `Category` in any available version.
 We changed that in *5.19.0*.
 
-Since there are data changes that are required for search to work, and we decided not to do a migration for that, because it is too dangerous to change your data like that, you will need a workaround to search entries stored prior to *5.19.0*.
+Since there are data changes that are required for search to work, and we decided not to do a migration for that because it is too dangerous to change your data like that, you will need a workaround to search entries stored prior to *5.19.0*.
 
 Let's say you want to search for Category with `entryId` *61a8c8a4625b0c0008fc8652* and you know that latest version is *3*, you would run a query like this:
 
