wip: create changelog

--- a/docs/release-notes/5.19.0/changelog.mdx
+++ b/docs/release-notes/5.19.0/changelog.mdx
@@ -8,6 +8,7 @@ description: See what's new in Webiny version 5.19.0.
 
 import CenteredImage from "@components/CenteredImage";
 import pageBuilderBtnAction from "./images/page-builder-btn-action.png";
+import truncationFixed from "./images/truncation-fixed.png";
 
 # Changes
 
@@ -60,6 +61,15 @@ By setting it to false (by passing `--no-deploy`), this small addition allows us
 ```bash
 yarn webiny deploy api --env dev --no-deploy
 ```
+
+### `webiny watch` Command - Fixed Multiline Logs ([#2103](https://github.com/webiny/webiny-js/pull/2103))
+
+Previously, if you were to add multiline logs in your cloud infrastructure (Pulumi) code, the [`webiny watch`](/docs/how-to-guides/use-watch-command/#can-i-use-the-webiny-watch-command-to-start-a-watch-process-on-frontend-react-apps) command's terminal output would get truncated. This has now been addressed, so you can freely add any additional multiline logs that you might need.
+
+<CenteredImage
+  src={truncationFixed}
+  title={"The highlight of this release - the new Amazon DynamoDB-only version of Webiny!"}
+/>
 
 ## Page Builder
 
