feat(release-notes): add note about db upgrade

--- a/docs/release-notes/5.19.0/upgrade-guide.mdx
+++ b/docs/release-notes/5.19.0/upgrade-guide.mdx
@@ -53,6 +53,13 @@ Finally, proceed by re-deploying your Webiny project:
 yarn webiny deploy --env {environment}
 ```
 
+## 4. Upgrade in the Admin Area
+
+There is a database upgrade that we execute from the Admin Area. To make sure it starts, clear your browser cache and log in.
+
+When upgrade screen shows, just follow the instructions.
+
+
 :::caution
 As stated in the [Overview](/docs/how-to-guides/upgrade-webiny#pre-production-environments-first) section, we recommend that you first deploy your changes into one of your pre-production environments, like `dev` or `staging`.
 :::
